[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
anyhow = "1.0.86"
exchange_manager = { path = "../exchange_manager" }
