[package]
name = "yolobot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exchange_manager = { path = "../exchange_manager" }
market_data = { path = "../market_data" }
yolobot_utils = { path = "../yolobot_utils" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
anyhow = "1.0.86"
